--- a/assets/stylesheets/hummingbird_onebox.scss
+++ b/assets/stylesheets/hummingbird_onebox.scss
@@ -88,3 +88,24 @@ h1.hb-onebox-header {
   border-radius: 3px;
   margin-bottom: 4px;
 }
+.hb-onebox-library-entry {
+  $green: #00A186;
+
+  background-color: $green;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 20px;
+  border-radius: 4px;
+  color: white;
+  font-size: 14px;
+  cursor: pointer;
+  height: 20px;
+  min-width: 100px;
+  transition: .1s background-color;
+
+  &:hover {
+    color: white;
+    background-color: darken($green, 10%);
+  }
+}
