Center posters on mobile

--- a/assets/stylesheets/hummingbird_onebox_mobile.scss
+++ b/assets/stylesheets/hummingbird_onebox_mobile.scss
@@ -2,7 +2,7 @@ aside.hb-onebox {
   flex-direction: column;
 }
 .hb-onebox-poster {
-  align-self: stretch;
+  align-self: center;
   text-align: center;
   padding: 21px 23px 0 23px;
 
